--- a/package.json
+++ b/package.json
@@ -17,11 +17,10 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "jwt-simple": "^0.5.6",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.9",
+    "mongoose-unique-validator": "^3.0.0",
     "morgan": "^1.10.0",
-    "multer": "^1.4.4",
-    "passport": "^0.5.2",
-    "passport-jwt": "^4.0.0"
+    "multer": "^1.4.4"
   }
 }
