--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "mongoose": "^6.2.9",
     "mongoose-unique-validator": "^3.0.0",
     "morgan": "^1.10.0",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-express": "^4.3.0"
   }
 }
